--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <button id="lang-toggle">🇬🇧</button>
+
     <div id="content" data-aos="fade-down">
-      <h1>Avalin</h1>
-      <p class="tagline">Creative Technologist · Interactive Developer · Logic Tinkerer</p>
+      <h1 data-i18n="name">Avalin</h1>
+      <p class="tagline" data-i18n="tagline">Creative Technologist · Interactive Developer · Logic Tinkerer</p>
     </div>
 
     <section class="about" data-aos="fade-up">
-      <h2>About Me</h2>
-      <p>
+      <h2 data-i18n="about_title">About Me</h2>
+      <p data-i18n="about_text">
         I'm Avalin — a creative technologist with a love for weird interfaces, logical problem-solving,
         and immersive experiences. I’ve built everything from backend schedulers to WebVR worlds and
         contributed to projects like LEGO Super Mario and AquaGlobe. When I’m not coding, I’m probably
@@ -23,59 +25,60 @@
     </section>
 
     <section data-aos="fade-up">
-      <h2 style="text-align:center;">Featured Projects</h2>
+      <h2 style="text-align:center;" data-i18n="projects_title">Featured Projects</h2>
       <div class="project-grid">
         <div class="project-card" data-aos="zoom-in">
           <img src="images/nbfc.gif" alt="Nightmare VR Preview">
-          <h3>Nightmare Before Christmas VR</h3>
-          <p>Gaze-based interaction in WebVR using A-Frame, themed around NBC. Built characters & logic.</p>
+          <h3 data-i18n="project_nbfc_title">Nightmare Before Christmas VR</h3>
+          <p data-i18n="project_nbfc_desc">Gaze-based interaction in WebVR using A-Frame, themed around NBC. Built characters & logic.</p>
         </div>
         <div class="project-card" data-aos="zoom-in">
           <img src="images/pokemon.gif" alt="Pokemon VR Preview">
-          <h3>Pokémon VR</h3>
-          <p>Catch Pokémon by throwing Pokéballs with gaze-based interaction. WebVR + A-Frame + JS.</p>
+          <h3 data-i18n="project_pokemon_title">Pokémon VR</h3>
+          <p data-i18n="project_pokemon_desc">Catch Pokémon by throwing Pokéballs with gaze-based interaction. WebVR + A-Frame + JS.</p>
         </div>
         <div class="project-card" onclick="window.open('https://www.amazon.com/gp/product/B08CNKKS9G', '_blank')" data-aos="zoom-in">
           <img src="images/lego-super-mario.png" alt="LEGO Preview">
-          <h3>LEGO Super Mario App</h3>
-          <p>Worked on C# backend and interactive logic for LEGO's Super Mario App.</p>
+          <h3 data-i18n="project_lego_title">LEGO Super Mario App</h3>
+          <p data-i18n="project_lego_desc">Worked on C# backend and interactive logic for LEGO's Super Mario App.</p>
         </div>
         <div class="project-card" onclick="window.open('https://smartplan.dk/', '_blank')" data-aos="zoom-in">
           <img src="images/smartplan.png" alt="Smartplan Preview">
-          <h3>Smartplan Backend</h3>
-          <p>Designed rostering logic with Drools Rule Engine & Java to solve NP-hard planning problems.</p>
+          <h3 data-i18n="project_smartplan_title">Smartplan Backend</h3>
+          <p data-i18n="project_smartplan_desc">Designed rostering logic with Drools Rule Engine & Java to solve NP-hard planning problems.</p>
         </div>
         <div class="project-card" onclick="window.open('https://www.rytterpark.dk', '_blank')" data-aos="zoom-in">
           <img src="images/rytterpark.png" alt="Rytterpark Preview">
-          <h3>Homeowners Association Website</h3>
-          <p>Custom-built admin/editable site using JS, Bootstrap, JSON from Google Sheets.</p>
+          <h3 data-i18n="project_rytterpark_title">Homeowners Association Website</h3>
+          <p data-i18n="project_rytterpark_desc">Custom-built admin/editable site using JS, Bootstrap, JSON from Google Sheets.</p>
         </div>
         <div class="project-card" onclick="window.open('https://www.via.dk/uddannelser/softwareingenioer/kate-og-astrid-softwareingenioer', '_blank')" data-aos="zoom-in">
           <img src="images/aquaglobe.png" alt="AquaGlobe Preview">
-          <h3>AquaGlobe VR</h3>
-          <p>Built VR content for AquaGlobe. A guided tour of the water’s journey from borehole to consumer. Unity + C# + VR APIs.</p>
+          <h3 data-i18n="project_aquaglobe_title">AquaGlobe VR</h3>
+          <p data-i18n="project_aquaglobe_desc">Built VR content for AquaGlobe. A guided tour of the water’s journey from borehole to consumer. Unity + C# + VR APIs.</p>
         </div>
       </div>
     </section>
 
     <section class="tech-stack" data-aos="fade-up">
-      <h2>Tech Stack</h2>
-      <p>C# · Unity · JavaScript · WebVR · A-Frame · Three.js · HTML/CSS · Drools · Git · VR APIs · Google Apps Script · Bootstrap</p>
+      <h2 data-i18n="tech_title">Tech Stack</h2>
+      <p data-i18n="tech_list">C# · Unity · JavaScript · WebVR · A-Frame · Three.js · HTML/CSS · Drools · Git · VR APIs · Google Apps Script · Bootstrap</p>
     </section>
 
     <section class="connect" data-aos="fade-up">
-      <h2>Let's Connect</h2>
-      <a href="https://github.com/Avalin" class="resume-btn" target="_blank">GitHub @Avalin</a>
-      <a href="mailto:astridavalin@gmail.com" class="resume-btn">Email Me</a>
-      <a href="documents/Avalin_Resume.pdf" class="resume-btn" download>Download Resume</a>
+      <h2 data-i18n="connect_title">Let's Connect</h2>
+      <a href="https://github.com/Avalin" class="resume-btn" target="_blank" data-i18n="github">GitHub @Avalin</a>
+      <a href="mailto:astridavalin@gmail.com" class="resume-btn" data-i18n="email">Email Me</a>
+      <a href="documents/Avalin_Resume.pdf" class="resume-btn" download data-i18n="resume">Download Resume</a>
     </section>
 
     <footer>
-      <p>© 2025 Avalin. Built with code, creativity, and probably some crying.</p>
+      <p data-i18n="footer">© 2025 Avalin. Built with code, creativity, and probably some crying.</p>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="main.js"></script>
+    <script src="locale.js"></script>
   </body>
 </html>
